test/tests/stages/14_pointers/invalid_types/extra_credit/bitwise_xor_pointer.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[4]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: ptr
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  Pointer: 
                    ULong: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: l
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 100
                      None: 
                    None: 
                  Long: 
                  None: 
            CS: 
              CExpression: 
                CBinary: 
                  CBitXor: 
                  CVar: 
                    TIdentifier: ptr
                    None: 
                  CVar: 
                    TIdentifier: l
                    None: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
